1.3.0
   - bug [10534] "parallelisering i storeCargoContainer pluginet"
   - bug [12158] "synkronisering på SGRP skal fjernes"
   - bug [11929] "Ændre nyeste version til 3.4.1"
   - bug [11883] "Vi skal have uppet vores fedora til 3.4"
   - bug [11759] "Alle timings skal leveres i loglevel INFO"
   - bug [11966] "DataDock crasher ved opstart - "too many files open""