@@ -5,3 +5,4 @@
    - bug [11883] "Vi skal have uppet vores fedora til 3.4"
    - bug [11759] "Alle timings skal leveres i loglevel INFO"
    - bug [11966] "DataDock crasher ved opstart - "too many files open""
+   - bug [11838] "Enkelte poster fejler med XPATH fejl i ForceFedoraPidEnvironment"
